argocd/glance-app/00-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance-deployment
  namespace: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
      - name: glance
        image: glanceapp/glance
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: glance-config
          mountPath: /app/glance.yml
          subPath: glance.yml
        - name: timezone
          mountPath: /etc/timezone
          readOnly: true
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
      volumes:
      - name: glance-config
        configMap:
          name: glance-config
      - name: timezone
        hostPath:
          path: /etc/timezone
      - name: localtime
        hostPath:
          path: /etc/localtime
