argocd/glance-app/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance-deployment
  namespace: glance
spec:
  selector:
    app: glance
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
